Incorporated summarizer deamon by refactoring summarizer.c into lib.c and header.h and creating a copy of summarizer.c (with only main() in it) into summarizerd.c. Also reconfigured the build elements and Makefile.* files.

--- a/configure.ac
+++ b/configure.ac
@@ -4,7 +4,7 @@
 AC_PREREQ([2.69])
 AC_INIT([summarizer], [0.1], [reeteshr@outlook.com])
 AM_INIT_AUTOMAKE([1.10 no-define foreign])
-AC_CONFIG_SRCDIR([src/summarizer.c])
+AC_CONFIG_SRCDIR([config.h.in])
 AC_CONFIG_HEADERS([config.h])
 
 # Checks for programs.
