--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,12 @@
-bin_PROGRAMS = summarizer
-summarizer_SOURCES = summarizer.c
+bin_PROGRAMS = summarizer summarizerd
+
+summarizer_SOURCES = summarizer.c lib.c
+summarizerd_SOURCES = summarizerd.c lib.c
+
 DEFS = @DEFS@ -DDICTIONARY_DIR=\"$(pkgdatadir)/\"
+
+CFLAGS = -Wall -Werror -Wextra
+
+summarizer.o: summarizer.c header.h
+summarizerd.o: summarizerd.c header.h
+lib.o : lib.c header.h
