* Summarizer daemon * Daemon test application
Daemon Defaults: 4 workers, listening queue depth - 32

Testing: good case, stress (descriptors, simultaneous multiple reqs), bad
request

Quality: beta

--- a/Makefile.in
+++ b/Makefile.in
@@ -274,8 +274,8 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = src dict
-DIST_SUBDIRS = src dict
+SUBDIRS = src dict etc
+DIST_SUBDIRS = src dict etc
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
