--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,7 +9,7 @@ summarizerd_LDADD = -lpthread
 DEFS = @DEFS@ -DDICTIONARY_DIR=\"$(pkgdatadir)/\"
 
 #CFLAGS = -Wall -Werror -Wextra -Wno-unused-parameter -DSMRZRLOG -DSMRZRPROF
-CFLAGS = -g -ggdb3 -O0 -Wall -Werror -Wextra -Wno-strict-aliasing -Wno-unused-parameter -DSMRZRLOG -DSMRZRPROF
+CFLAGS = -O2 -Wall -Werror -Wextra -Wno-strict-aliasing -Wno-unused-parameter -DSMRZRLOG -DSMRZRPROF
 
 summarizer.o: summarizer.c header.h
 summarizerd.o: summarizerd.c header.h daemon.h
