--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -168,7 +168,7 @@ CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 
 #CFLAGS = -Wall -Werror -Wextra -Wno-unused-parameter -DSMRZRLOG -DSMRZRPROF
-CFLAGS = -O2 -Wall -Werror -Wextra -Wno-strict-aliasing -Wno-unused-parameter -DSMRZRLOG -DSMRZRPROF
+CFLAGS = -O2 -Wall -Werror -Wextra -Wno-strict-aliasing -Wno-unused-parameter -DSMRZRLOG
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CYGPATH_W = @CYGPATH_W@
